--- a/agents_and_servers/server/package.json
+++ b/agents_and_servers/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user_agent",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,10 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "hyperquest": "^1.2.0",
-    "minimist": "^1.2.0",
-    "request": "^2.67.0"
-  }
+  "license": "ISC"
 }
